@@ -9,3 +9,4 @@ include view/*.xml
 include *.odt
 include locale/*.po
 include tests/*.rst
+include doc/*.rst
