@@ -2,6 +2,8 @@
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <form string="Statement">
+    <label name="name"/>
+    <field name="name" colspan="3"/>
     <label name="journal"/>
     <field name="journal"/>
     <label name="date"/>
@@ -10,6 +12,12 @@ this repository contains the full copyright notices and license terms. -->
     <field name="start_balance"/>
     <label name="end_balance"/>
     <field name="end_balance"/>
+    <label name="total_amount"/>
+    <field name="total_amount"/>
+    <newline/>
+    <label name="number_of_lines"/>
+    <field name="number_of_lines"/>
+    <newline/>
     <notebook colspan="4">
         <page string="Statement Lines" col="4" id="statement_lines">
             <field name="lines" colspan="4"
@@ -33,5 +41,4 @@ this repository contains the full copyright notices and license terms. -->
             <field name="company"/>
         </page>
     </notebook>
-    <field name="currency_digits" colspan="4" invisible="1"/>
 </form>
